fixed header on mobile

--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -67,7 +67,9 @@
   }
 
   @media (max-width: $mobile-width-only) {
-    //padding: 0 5%;
+    flex-direction: column;
+    height: 263px;
+    padding: 0 5%;
   }
 }
 
@@ -82,6 +84,10 @@
   @media (max-width: $tablet-width-only) {
     justify-content: space-around;
     padding: 40px 0 36px;
+  }
+
+  @media (max-width: $mobile-width-only) {
+    flex-direction: column;
   }
 }
 
@@ -178,6 +184,10 @@
 
   @media (min-width: $desktop-width) {
     display: none;
+  }
+
+  @media (max-width: $mobile-width-only) {
+    margin: 0;
   }
 }
 
