--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -2,7 +2,7 @@
   margin: 0 auto;
 
   @media (min-width: $desktop-width) {
-    max-width: 1411px;
+    max-width: 1426px;
   }
 
   @media (max-width: $tablet-width-only) {
