--- a/source/sass/blocks/nav-bar.scss
+++ b/source/sass/blocks/nav-bar.scss
@@ -11,14 +11,15 @@
   align-items: center;
 
   height: 52px;
-  padding: 34px 0 0;
+  box-sizing: border-box;
+  padding: 60px 8px 0;
 
   @media (max-width: $tablet-width-only) {
-    padding-top: 21px;
+    padding: 40px 0 0;
   }
 
   @media (max-width: $mobile-width-only) {
-    padding: 11px 13px 0 18px;
+    padding: 18px 13px 0 17px;
   }
 }
 
